5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4272/executions/1602_1446.log
== TEST (2019-03-20 19:28:02) 
-- CODE:
var = input("10.0")
total = 

-- ERROR:
File "XXXX", line 2
    total = 
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:28:25) 
-- CODE:
var = float(input("10.0"))
total = 

-- ERROR:
File "XXXX", line 2
    total = 
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:31:52) 
-- CODE:
var = float(input("10.0"))
total = var+2/3+1/2

-- ERROR:
File "XXXX", line 2
    total = 
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:33:43) 
-- CODE:
var = float(input("10.0"))
total = var+2/3+1/2
print(round(3,333))

-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:34:01) 
-- CODE:
var = float(input("10.0"))
total = var+2/3+1/2
print(round(3,333))

-- EXECUTION TIME:
0.228726
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
3
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
3
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:31:34) 
-- CODE:
var = float(input("litros de polpa "))
total = var*1/3
print(round(total))

-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 22:31:40) 
-- CODE:
var = float(input("litros de polpa "))
total = var*1/3
print(round(total))

-- EXECUTION TIME:
0.18806
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
2
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
7
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:32:23) 
-- CODE:
var = float(input("litros de polpa "))
total = var*1/3
print(round(total, n))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(total, n))
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 22:32:27) 
-- CODE:
var = float(input("litros de polpa "))
total = var*1/3
print(round(total, n))

-- EXECUTION TIME:
0.199568
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1446/main.py", line 3, in <module>
    print(round(total, n))
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 22:33:14) 
-- CODE:
var = float(input("litros de polpa "))
total = var*1/3
print(total)

-- EXECUTION TIME:
0.160565
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
2.3333333333333335
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
6.666666666666667
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
5.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 22:33:56) 
-- CODE:
var = float(input("litros de polpa "))
total = var*1/3
print(round(total, 333))

-- OUTPUT:
2.3333333333333335
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 22:34:01) 
-- CODE:
var = float(input("litros de polpa "))
total = var*1/3
print(round(total, 333))

-- EXECUTION TIME:
0.201154
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
2.3333333333333335
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
6.666666666666667
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
5.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 22:34:45) 
-- CODE:
var = float(input("litros de polpa "))
total = var*1/3
print(round(total, 3))

-- EXECUTION TIME:
0.149772
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
2.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
6.667
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
5.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
